# youtube-dl-gui

./: .codecov.yaml  .eslintrc.js  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  UI.js  about.hbs  appimage-fix.js  back-end.js  caching.js  controller.js  custom.css  downloader.js  eslint.config.js  fix-linux-builds.js  index.html  main.css  main.html  main.js  metrics.js  package-lock.json  package.json  playlist.js  playwright.config.ts  plugins.js  preload.js  renderer.html  renderer.js  repack-appimage.js  snapcraft.yaml  tsconfig.json  tsconfig.node.json  updater.js  url-import-test.csv  video.js  vite.config.isolation.ts  vite.config.ts  vitest.config.ts  (+1 more)
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question-template.md  question.md
.github/workflows/: build-release.yaml  continous-integration.yaml  continuous-integration.yaml  distribute.yml  msix.yml  pages.yml  publish.yml  rust-ci.yml  vue-ci.yml  (+1 more)
binaries/: send_traffic_to_videodownloader.py  youtube-dl-unix  yt-dlp-unix  ytdlVersion
crates/ovd-core/: Cargo.toml
crates/ovd-core/src/: diagnostic_rules.json  lib.rs
crates/ovd-core/src/binaries/: binaries_manager.rs  binaries_state.rs
crates/ovd-core/src/capabilities/: context.rs  events.rs  mod.rs  paths.rs  process.rs  secrets.rs  spawner.rs
crates/ovd-core/src/config/: handle.rs  models.rs
crates/ovd-core/src/logging/: log_state.rs  log_store.rs
crates/ovd-core/src/models/: error.rs  mod.rs  payloads.rs
crates/ovd-core/src/parsers/: ytdlp_playlist.rs  ytdlp_single.rs
crates/ovd-core/src/runners/: mod.rs  ytdlp_download.rs  ytdlp_info.rs  ytdlp_runner.rs
crates/ovd-core/src/scheduling/: dispatcher.rs  download_pipeline.rs  fetch_pipeline.rs  mod.rs
crates/ovd-server/: Cargo.toml
crates/ovd-server/src/: lib.rs
docs/: README.md  index.html  license.html  privacy.html
licenses/: 3rdpartylicenses.txt
modules/: Analytics.js  AppUpdater.js  Authentication.js  BinaryUpdater.js  ClipboardWatcher.js  DetectPython.js  DoneAction.js  DownloadQuery.js  DownloadQueryList.js  Environment.js  ErrorHandler.js  FfmpegUpdater.js  Filepaths.js  Format.js  FormatQuery.js  InfoQuery.js  InfoQueryList.js  MitmProxyUpdater.js  ProgressManager.js  Query.js  QueryList.js  QueryManager.js  Settings.js  UI.js  Utils.js  Video.js  caching.js  controller.js  downloads.js  metrics.js  playlist.js  preload.js  settings.js  updater.js  video.js
renderer/: .eslintrc.js  renderer.css  renderer.html  renderer.js
resources/: after.py  details  mp4decrypt  pre.py  selectRules.conf  youtube-dl-darwin
scripts/: canonicalize.ts  fetch-sources.ts  gen-manifest.ts  licenses.ts  sign-manifest.ts  sources.ts  verify-manifest.ts
src/: App.vue  app.css  i18n.ts  main.ts  router.ts  sentry.ts  vite-env.d.ts
src-isolation/: globals.d.ts  index.html  main.ts
src-tauri/: Cargo.toml  about.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/locales/: de.json  en.json  es.json  fr.json  it.json  nb.json  nl.json  pt-BR.json  pt-PT.json  ru.json  tr.json  zh-TW.json
src-tauri/src/: diagnostic_rules.json  events.rs  i18n.rs  lib.rs  main.rs  menu.rs  paths.rs  tray.rs  window.rs
src-tauri/src/audio_quality/: decode.rs  metrics.rs  mod.rs
src-tauri/src/binaries/: binaries_extractor.rs  binaries_manager.rs  binaries_state.rs  mod.rs
src-tauri/src/commands/: app_ready.rs  mod.rs  notifications.rs  platform.rs  shortcuts.rs
src-tauri/src/commands/binaries/: binaries_check.rs  binaries_ensure.rs  mod.rs
src-tauri/src/commands/config/: config_get.rs  config_reset.rs  config_set.rs  mod.rs
src-tauri/src/commands/group/: group_cancel.rs  mod.rs
src-tauri/src/commands/logging/: logging_subscribe.rs  logging_unsubscribe.rs  mod.rs
src-tauri/src/commands/media/: media_check_audio_quality.rs  media_download.rs  media_info.rs  media_playlist_expand.rs  media_size.rs  mod.rs
src-tauri/src/commands/music/: mod.rs  music_recommend.rs
src-tauri/src/commands/preferences/: mod.rs  preferences_get.rs  preferences_reset.rs  preferences_set.rs
src-tauri/src/commands/stronghold/: mod.rs  stronghold_get.rs  stronghold_init.rs  stronghold_keys.rs  stronghold_set.rs  stronghold_status.rs
src-tauri/src/commands/updater/: mod.rs  updater_check.rs  updater_download.rs  updater_install.rs
src-tauri/src/config/: handle.rs  mod.rs  models.rs  provider.rs  store.rs
src-tauri/src/logging/: log_state.rs  log_store.rs  mod.rs
src-tauri/src/models/: download.rs  mod.rs  parsed.rs  payloads.rs  progress.rs  ytdlp.rs
src-tauri/src/parsers/: mod.rs  ytdlp_error.rs  ytdlp_info.rs  ytdlp_livestream.rs  ytdlp_playlist.rs  ytdlp_progress.rs  ytdlp_single.rs
src-tauri/src/parsers/ytdlp_single/: chapters.rs  codecs.rs  common.rs  formats.rs  mod.rs  test_support.rs  tests.rs  tracks.rs
src-tauri/src/runners/: mod.rs  override_resolver.rs  process_runner.rs  spawner.rs  template_context.rs  ytdlp_args.rs  ytdlp_download.rs  ytdlp_info.rs  ytdlp_process.rs  ytdlp_runner.rs
src-tauri/src/runners/ytdlp_args/: format_args.rs  input_filter_args.rs  location_args.rs  output_args.rs  tests.rs
src-tauri/src/scheduling/: concurrency.rs  dispatcher.rs  download_pipeline.rs  fetch_pipeline.rs  group_state.rs  mod.rs  numbering.rs
src-tauri/src/state/: config.rs  config_models.rs  json_handle.rs  json_state.rs  mod.rs  preferences.rs  preferences_models.rs
src-tauri/src/stronghold/: mod.rs  secrets_store.rs  state.rs  stronghold_state.rs  vault.rs
test/: Settings.test.js  Utils.test.js  settings.test.js  test-settings.json
tests/: Analytics.test.js  BinaryUpdater.test.js  ClipboardWatcher.test.js  DetectPython.test.js  DoneAction.test.js  ErrorHandler.test.js  FfmpegUpdater.test.js  Filepaths.test.js  Format.test.js  InfoQuery.test.js  InfoQueryList.test.js  Logger.test.js  MitmproxyUpdater.test.js  Query.test.js  Settings.test.js  TaskList.test.js  Utils.test.js  Video.test.js  iso-test.json  test-settings.json
web-resources/: bootstrap.min.js.map  bs-stepper.min.js.map
(+277 files in other folders)
