[package]
name = "open-video-downloader"
version = "3.0.1"
description = "Download videos from all over the web."
license = "AGPL-3.0-or-later"
authors = ["Jelle Glebbeek"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "open_video_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
server = ["dep:ovd-server"]

[build-dependencies]
tauri-build = { version = "2", features = ["isolation"] }

[dependencies]
ovd-core = { path = "../crates/ovd-core" }
ovd-server = { path = "../crates/ovd-server", optional = true }
tauri = { version = "2.9.3", features = ["isolation", "image-png"] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
tokio = { version = "1.48.0", features = ["full"] }
base64 = "0.22.1"
tauri-plugin-keyring = "0.1.0"
rand = "0.9.2"
tauri-plugin-stronghold = "2.3.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
sentry = { version = "0.46.0", features = [
    "tracing",
] }
