[package]
name = "open-video-downloader"
version = "3.1.0"
description = "Download videos from all over the web."
license = "AGPL-3.0-or-later"
authors = ["Jelle Glebbeek"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "open_video_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["isolation"] }

[dependencies]
tauri = { version = "2.9.5", features = ["isolation", "image-png", "unstable"] }
tauri-plugin-opener = "2.5.2"
tauri-plugin-global-shortcut = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
uuid = { version = "1.19.0", features = ["v4"] }
futures = "0.3.31"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
arc-swap = "1.7.1"
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["std"] }
base64 = "0.22.1"
hex = "0.4"
zip = "7.0.0"
tar = "0.4"
bzip2 = "0.6.1"
tauri-plugin-keyring = "0.1.0"
rand = "0.9.2"
tauri-plugin-stronghold = "2.3.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.20"
sentry = { version = "0.46.0", features = [
    "tracing",
] }
regex = "1.12.2"
fs_extra = "1.3.0"
indexmap = { version = "2.12.1", features = ["serde"] }

[profile.dev]
incremental = true

[profile.dev.package.scrypt]
opt-level = 3

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true
opt-level = "s"
panic = "abort"
strip = false
debug = 1
split-debuginfo = "packed"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

