[package]
name = "open-video-downloader"
version = "3.1.3"
description = "Download videos from all over the web."
license = "AGPL-3.0-or-later"
authors = ["Jelle Glebbeek"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "open_video_downloader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["isolation"] }

[dependencies]
tauri = { version = "2.10.2", features = ["isolation", "image-png", "tray-icon", "unstable"] }
tauri-plugin-opener = "2.5.3"
tauri-plugin-global-shortcut = "2.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
uuid = { version = "1.19.0", features = ["v4"] }
futures = "0.3.31"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
arc-swap = "1.8.1"
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["std"] }
base64 = "0.22.1"
hex = "0.4"
zip = "7.4.0"
tar = "0.4"
bzip2 = "0.6.1"
tauri-plugin-keyring = "0.1.0"
rand = "0.9.2"
tauri-plugin-stronghold = "2.3.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
sentry = { version = "0.46.2", features = [
    "tracing",
] }
regex = "1.12.3"
fs_extra = "1.3.0"
indexmap = { version = "2.13.0", features = ["serde"] }
include_dir = "0.7.4"
sys-locale = "0.3.2"
notify-rust = "4.12.0"

[dev-dependencies]
tauri = { version = "2.10.2", features = ["test"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.176"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_JobObjects", "Win32_System_Threading"] }

[profile.dev]
incremental = true

[profile.dev.package.scrypt]
opt-level = 3

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true
opt-level = "s"
panic = "abort"
strip = false
debug = 1
split-debuginfo = "packed"
