[package]
name = "ovd-core"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
tracing = "0.1"
futures = "0.3.31"
regex = "1.12.2"
base64 = "0.22.1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2.12.0", features = ["serde"] }
arc-swap = "1.7.1"
hex = "0.4"
zip = "6.0.0"
tar = "0.4"
bzip2 = "0.6.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["std"] }
fs_extra = "1.3.0"
