[package]
name = "ovd-server"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
ovd-core = { path = "../ovd-core" }

tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"

axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
